<updated search form and deleted irrelevant html elements>

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,9 @@
-.search-form {
-	width: 20%;
+#find {
+	display: block;
 }
+/*.search-form-text {
+	width: 22%;
+}
+.search-form-btn {
+	width: 6%;
+}*/
