--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -82,3 +82,43 @@ img {
 .page-link{
 	background:blue;
 }
+.choose-button {
+   position: relative;
+   background-color: #c61f41 ;
+   border: 2px solid white;
+   border-radius:15px;
+   font-size: 14px;
+   font-weight:bold;
+   font-family:lucida;
+   color: #FFFFFF ;
+   padding: 10px;
+   width: 100px;
+   text-align: center;
+   -webkit-transition-duration: 0.4s; /* Safari */
+   transition-duration: 0.4s;
+   text-decoration: none;
+   overflow: hidden;
+   cursor: pointer;
+   box-shadow: 0 7px #ce8686 ;
+}
+.choose-button:after {
+   content: "";
+   background: white;
+   display: block;
+   position: absolute;
+   padding-top: 300%;
+   padding-left: 350%;
+   margin-left: -20px!important;
+   margin-top: -120%;
+   opacity: 0;
+   transition: all 0.8s
+}
+.choose-button:active:after {
+   padding: 0;
+   margin: 0;
+   opacity: 1;
+   transition: 0s
+}
+.choose-button:hover {
+	background-color: #ed0e0e 
+}
