--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,17 +1,17 @@
 body{
-	background:#c61f41;
+	background: white;
 }
 .home-return{
-	color:white;
+	color: white;
 }
 a:hover {
 	font-size:120%;
 	color:white;
  }
- .font{
- 	font-weight:bold;
- 	color:#c61f41;
- 	font-family:Lucida;
+.font{
+ 	font-weight: bold;
+ 	color: black;
+ 	font-family: Lucida;
  }
 #find {
 	display: block;
@@ -29,16 +29,45 @@ a:hover {
     border: 2px solid white;
 }
 #belowPhoto {
-	background: wheat;
-	color: #104E8B;
+	position: relative;
+    background: #5C97FF;
+    overflow: hidden;
+	color: #ACAFB4;
 	border-radius: 25px;
 	border: 2px solid white;
 	font-family:lucida;
 }
+#belowPhoto:before {
+	content: ' ';
+    display: block;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 2;
+    opacity: 0.6;
+    background: url('http://cdn2.bigcommerce.com/server2900/qlqdgd7/products/534/images/1710/GIRLY_BITS_irid_blue_green_015__02003.1368552204.1280.1280.JPG?c%5Cx3d2');
+    /*background: #85857C;*/
+    background-position: 50% 0;
+    -ms-background-size: cover;
+    -o-background-size: cover;
+    -moz-background-size: cover;
+    -webkit-background-size: cover;
+    background-size: cover;
+}
+#belowPhoto h1, #belowPhoto h3 {
+	position: relative;
+	z-index: 2;
+}
+#searchResultsRow {
+	color: black;
+	z-index: 2;
+    position: relative;
+}
 .footer-container {
 	background: black;
-	color: white;
-	
+	color: black;
 	border: 2px solid black;
 	font-family:lucida;
 }
