--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,19 +1,27 @@
-body{
+body {
 	/*background: white;*/
-  background-image: url('http://www.bing.com/images/search?view=detailV2&ccid=bqrGh8uw&id=FCA1BB169F9EFB19C2D6317E944F6D0548F23B30&thid=OIP.bqrGh8uwgZdsdddJ3KVneQECDx&q=subtle+patterns+background+city&simid=607988704504122410&selectedindex=111&mode=overlay&first=1');
+  /*background-image: url('https://t3.ftcdn.net/jpg/01/38/06/92/500_F_138069241_UK1jK2iIpsKiRrseeCdAoF6ODNxgN3Ui.jpg');
+  */
+  /*background: #FFFAF7;*/
+  background-image: url('https://s3-eu-west-1.amazonaws.com/surfaceview/images/2327/original/TEX0050_websource.jpg');
+  
+  /*background-image: url('https://ak5.picdn.net/shutterstock/videos/14795113/thumb/1.jpg?i10c=img.resize(height:160)');
+  */
+  /*background-image: url('https://images.megapixl.com/192/1926307.jpg');
+  */
 }
 .home-return{
-	color: white;
+	color: black;
 }
 a:hover {
 	font-size:120%;
-	color:white;
- }
+	color: black;
+}
 .font{
  	font-weight: bold;
  	color: black;
  	font-family: Lucida;
- }
+}
 #find {
 	display: block;
 }
@@ -31,7 +39,9 @@ a:hover {
   /*background: #5C97FF;*/
   /*background: #85857C;*/
   /*background: #ACAFB4;*/
-  background: #FFFAF7;
+  /*background: #FFFAF7;*/
+  background: #F1D6E8;
+  background: #cccccc;
   overflow: hidden;
 	border-radius: 25px;
 	font-family:lucida;
@@ -45,8 +55,13 @@ a:hover {
   width: 100%;
   height: 100%;
   z-index: 2;
-  opacity: 0.3;
-  background: url('http://cache.wizardworld.com/files/hero/_1200x630_fit_center-center_100/WW-cleveland.jpg');
+  opacity: 0.4;
+  background-image: url('https://s3-eu-west-1.amazonaws.com/surfaceview/images/2327/original/TEX0050_websource.jpg');
+  
+  /*background-image: url('https://ak5.picdn.net/shutterstock/videos/14795113/thumb/1.jpg?i10c=img.resize(height:160)');
+  */
+  /*background-image: url('https://images.megapixl.com/192/1926307.jpg');
+  */
   background-position: 50% 0;
   -ms-background-size: cover;
   -o-background-size: cover;
@@ -62,7 +77,7 @@ a:hover {
 #searchLocation,
 #eventDescriptionRow {
 	color: black;
-	z-index: 2;
+	z-index: 3;
   position: relative;
 }
 .footer-container {
@@ -74,7 +89,6 @@ a:hover {
 .well {
 	background-image: url('http://cache.wizardworld.com/files/hero/_1200x630_fit_center-center_100/WW-cleveland.jpg');
 	border-radius: 25px;
-	border:2px solid white;
 }
 .input-form {
 	width: 100%;
@@ -82,7 +96,6 @@ a:hover {
 	background: wheat;
 	color: #104E8B;
 	border-radius: 25px;
-	border: 2px solid #c61f41;
 	font-family:lucida;
 }
 .subscribe-text{
@@ -133,7 +146,7 @@ img {
    text-decoration: none;
    overflow: hidden;
    cursor: pointer;
-   box-shadow: 0 7px #ce8686 ;
+   box-shadow: 0 7px #ce8686;
 }
 .choose-button:after {
    content: "";
