--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,11 +47,6 @@ a:hover {
   box-shadow: 9px 9px 0 0  #777777;
 }
 #belowPhoto {
-  /*background: #5C97FF;*/
-  /*background: #85857C;*/
-  /*background: #ACAFB4;*/
-  /*background: #FFFAF7;*/
-  background: #F1D6E8;
   background: #cccccc;
   overflow: hidden;
   /*border-radius: 25px;*/
@@ -105,7 +100,7 @@ a:hover {
 	border: 2px solid black;
 	font-family:lucida;
 }
-.well {
+#email-well {
 	background-image: url('https://d2gg9evh47fn9z.cloudfront.net/800px_COLOURBOX3956366.jpg');
 	border-radius: 25px;
 }
