--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -52,6 +52,7 @@ a:hover {
   /*border-radius: 25px;*/
   font-family:lucida;
   box-shadow: 9px 9px 0 0 #777777;
+  color: black;
 }
 #belowPhoto:before {
   content: ' ';
@@ -60,13 +61,13 @@ a:hover {
   left: 0;
   top: 0;
   width: 100%;
-  height: 100%;
+ /* height: 100%;*/
   z-index: 2;
   opacity: 0.4;
   /*border-radius: 25px;*/
   overflow: hidden;
   text-overflow: ellipsis;
-  height: 500px;
+  /*height: 500px;
   /*background-image: url('https://s3-eu-west-1.amazonaws.com/surfaceview/images/2327/original/TEX0050_websource.jpg');
   */
   background-image: url('https://ak5.picdn.net/shutterstock/videos/14795113/thumb/1.jpg?i10c=img.resize(height:160)');
@@ -88,10 +89,6 @@ a:hover {
 #belowPhoto button {
   z-index: 3;
   position: relative;
-}
-#belowPhoto {
-  color: black;
-  height: 500px;
 }
 #searchLocation,
 #eventDescriptionRow {
@@ -115,7 +112,7 @@ a:hover {
 	padding: 10px;
 	background-image: url('http://i.dailymail.co.uk/i/pix/2016/04/15/13/2591F30000000578-3541631-image-a-4_1460721669000.jpg');
 	color: white;
-	border-radius: 25px;
+	/*border-radius: 25px;*/
 	font-family:lucida;
 }
 .subscribe-text{
@@ -138,14 +135,14 @@ a:hover {
 	right:100px;
 	background: wheat;
 	color: #104E8B;
-	border-radius: 25px;
+	/*border-radius: 25px;*/
 	border: 2px solid #c61f41;
 	font-family:lucida;
   width: 40%;
 	padding: 10px;
 }
 img {
-	border-radius: 25px;
+	/*border-radius: 25px;*/
 	/*border: 2px solid #104E8B;*/
 }
 .page-link{
@@ -155,7 +152,7 @@ img {
    position: relative;
    background-color: #c61f41 ;
    border: 2px solid white;
-   border-radius:15px;
+   /*border-radius:15px;*/
    font-size: 14px;
    font-weight:bold;
    font-family:lucida;
