updated details.html and style.css files

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,7 +15,7 @@ body {
 #title {
   overflow: hidden;
   text-overflow: ellipsis;
-  max-height: 64px;
+  max-height: 96px;
 }
 .home-return{
 	color: black;
@@ -46,15 +46,16 @@ a:hover {
   /*border-radius: 25px;*/
   box-shadow: 9px 9px 0 0  #777777;
 }
-#belowPhoto {
-  background: #cccccc;
+#belowPhoto,
+#belowPhotoDetails {
+  background: #aaaaaa;
   overflow: hidden;
-  /*border-radius: 25px;*/
   font-family:lucida;
   box-shadow: 9px 9px 0 0 #777777;
   color: black;
 }
-#belowPhoto:before {
+#belowPhoto:before,
+#belowPhotoDetails:before {
   content: ' ';
   display: block;
   position: absolute;
@@ -65,32 +66,35 @@ a:hover {
   z-index: 2;
   opacity: 0.4;
   /*border-radius: 25px;*/
+  background-color: #ffffff;
   overflow: hidden;
   text-overflow: ellipsis;
-  /*height: 500px;
-  /*background-image: url('https://s3-eu-west-1.amazonaws.com/surfaceview/images/2327/original/TEX0050_websource.jpg');
-  */
-  background-image: url('https://ak5.picdn.net/shutterstock/videos/14795113/thumb/1.jpg?i10c=img.resize(height:160)');
-
-  /*background-image: url('https://images.freecreatives.com/wp-content/uploads/2015/05/wildtextures_white-brick-wall.jpg');
-  */
-  background-position: 50% 0;
   -ms-background-size: cover;
   -o-background-size: cover;
   -moz-background-size: cover;
   -webkit-background-size: cover;
   background-size: cover;
 }
+#belowPhoto:before {
+  height: 500px;
+}
 #belowPhoto,
 #belowPhoto img,
 #belowPhoto h2,
 #belowPhoto h4,
 #belowPhoto p,
-#belowPhoto button {
+#belowPhoto button,
+#belowPhotoDetails,
+#belowPhotoDetails #titleRow,
+#belowPhotoDetails #startTime,
+#belowPhotoDetails #eventDescriptionRow {
+  color: black;
   z-index: 3;
   position: relative;
 }
-#searchLocation,
+#belowPhoto {
+  height: 500px;
+}
 #eventDescriptionRow {
   color: black;
   z-index: 3;
@@ -99,7 +103,7 @@ a:hover {
 }
 .footer-container {
 	background: black;
-	color: black;
+	color: white;
 	border: 2px solid black;
 	font-family:lucida;
 }
