--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -79,7 +79,9 @@ a:hover {
 #belowPhoto button,
 #belowPhotoDetails,
 #belowPhotoDetails #titleRow,
+#belowPhotoDetails h3,
 #belowPhotoDetails #startTime,
+#belowPhotoDetails h4,
 #belowPhotoDetails #eventDescriptionRow {
   color: black;
   z-index: 3;
@@ -95,9 +97,9 @@ a:hover {
   height: 500px;
 }
 .footer-container {
-	background: black;
+	background: purple;
 	color: white;
-	border: 2px solid black;
+	border: 2px purple solid;
 	font-family:lucida;
 }
 .email-form {
