--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,6 +15,7 @@ body {
 	color: black;
   box-shadow: 9px 9px 0 0  #777777;
   border-radius: 25px;
+  padding:10px;
 }
 a:hover {
 	font-size:120%;
