--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,9 +35,10 @@ body {
   visibility: visible;
 }
 .home-return{
-	color: black;
+	color: purple;
+  font-family: 'Segoe Script';
   box-shadow: 9px 9px 0 0  #777777;
-  border-radius: 25px;
+  /*border-radius: 25px;*/
   padding:10px;
 }
 a:hover {
