--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,8 +36,10 @@ body {
 }
 .home-return{
 	color: purple;
-  font-family: 'Segoe Script';
-  box-shadow: 9px 9px 0 0  #777777;
+  font-family: 'Noteworthy';
+  font-size: 48px;
+  font-weight: bold;
+  /*box-shadow: 9px 9px 0 0  #777777;*/
   /*border-radius: 25px;*/
   padding:10px;
 }
